Fix svg visible on rotated card

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,6 +25,8 @@ html, body {
   opacity: 0.4;
 
   svg {
+    -webkit-transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
     height: 100%;
   }
 }
